--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
 
     <link rel="Stylesheet" href="./style.css" />
-    <script defer src="wordmasters.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <main class="article-preview">
@@ -31,47 +31,48 @@
           src="./images/drawers.jpg"
           alt="decor-image"
         />
-
-        <div class="text">
-          <h2>
-            Shift the overall look and feel by adding these wonderful touches to
-            furniture in your home
-          </h2>
-          <p>
-            Ever been in a room and felt like something was missing? Perhaps it
-            felt slightly bare and uninviting. I’ve got some simple tips to help
-            you make any room feel complete.
-          </p>
-        </div>
-        <div class="article-footer">
-          <div class="profile">
-            <img src="./images/avatar-michelle.jpg" alt="" />
-            <div class="profile-info">
-              <h3 class="name">Michelle Appleton</h3>
-              <h4 class="date">28 Jun 2020</h4>
-            </div>
-            <div class="share-icon">
-              <img src="./images/icon-share.svg" alt="icon-share" />
+        <div class="text-container">
+          <div class="text">
+            <h2>
+              Shift the overall look and feel by adding these wonderful touches
+              to furniture in your home
+            </h2>
+            <p>
+              Ever been in a room and felt like something was missing? Perhaps
+              it felt slightly bare and uninviting. I’ve got some simple tips to
+              help you make any room feel complete.
+            </p>
+          </div>
+          <div class="article-footer">
+            <div class="profile">
+              <img src="./images/avatar-michelle.jpg" alt="" />
+              <div class="profile-info">
+                <h3 class="name">Michelle Appleton</h3>
+                <h4 class="date">28 Jun 2020</h4>
+              </div>
+              <div class="share-icon">
+                <img src="./images/icon-share.svg" alt="icon-share" />
+              </div>
             </div>
           </div>
-        </div>
-        <div class="share-social-links hidden">
-          <h5>Share</h5>
-          <div class="social-links">
-            <a href=""
-              ><img src="./images/icon-facebook.svg" alt="icon-facebook"
-            /></a>
-            <a href=""
-              ><img src="./images/icon-twitter.svg" alt="icon-twitter"
-            /></a>
-            <a href="">
-              <img src="./images/icon-pinterest.svg" alt="icon-pinterest"
+          <div class="share-social-links hidden">
+            <h5>Share</h5>
+            <div class="social-links">
+              <a href=""
+                ><img src="./images/icon-facebook.svg" alt="icon-facebook"
+              /></a>
+              <a href=""
+                ><img src="./images/icon-twitter.svg" alt="icon-twitter"
+              /></a>
+              <a href="">
+                <img src="./images/icon-pinterest.svg" alt="icon-pinterest"
+              /></a>
+            </div>
+            <div class="falling-arrow"></div>
+            <a class="share-icon" href=""
+              ><img src="./images/icon-share.svg" alt="icon-share"
             /></a>
           </div>
-          <div class="falling-arrow"></div>
-          <a class="share-icon-2" href=""
-            ><img src="./images/icon-share.svg" alt="icon-share"
-          /></a>
         </div>
       </div>
     </main>
